[package]
name = "lash-oblique"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "lash-oblique"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

lash = { git = "https://github.com/SamGalanakis/lash", rev = "8019c0581b137020844dd7d54a56d4aea1072209", default-features = false, features = ["full"] }
lash-embed = { git = "https://github.com/SamGalanakis/lash", rev = "8019c0581b137020844dd7d54a56d4aea1072209" }
lash-export = { git = "https://github.com/SamGalanakis/lash", rev = "8019c0581b137020844dd7d54a56d4aea1072209" }
lash-llm-tools = { git = "https://github.com/SamGalanakis/lash", rev = "8019c0581b137020844dd7d54a56d4aea1072209" }
lash-mode-rlm = { git = "https://github.com/SamGalanakis/lash", rev = "8019c0581b137020844dd7d54a56d4aea1072209" }
lash-providers-builtin = { git = "https://github.com/SamGalanakis/lash", rev = "8019c0581b137020844dd7d54a56d4aea1072209" }
lash-rlm-types = { git = "https://github.com/SamGalanakis/lash", rev = "8019c0581b137020844dd7d54a56d4aea1072209" }
lash-sqlite-store = { git = "https://github.com/SamGalanakis/lash", rev = "8019c0581b137020844dd7d54a56d4aea1072209" }
lash-subagents = { git = "https://github.com/SamGalanakis/lash", rev = "8019c0581b137020844dd7d54a56d4aea1072209" }
