[package]
name = "lash-oblique"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "lash-oblique"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

lash = { git = "https://github.com/SamGalanakis/lash", rev = "b5538b55c1cc5cdfe56c5aa59b0bd5330867fe33" }
lash-export = { git = "https://github.com/SamGalanakis/lash", rev = "b5538b55c1cc5cdfe56c5aa59b0bd5330867fe33" }
lash-llm-tools = { git = "https://github.com/SamGalanakis/lash", rev = "b5538b55c1cc5cdfe56c5aa59b0bd5330867fe33" }
lash-providers-builtin = { git = "https://github.com/SamGalanakis/lash", rev = "b5538b55c1cc5cdfe56c5aa59b0bd5330867fe33" }
lash-rlm-types = { git = "https://github.com/SamGalanakis/lash", rev = "b5538b55c1cc5cdfe56c5aa59b0bd5330867fe33" }
lash-sqlite-store = { git = "https://github.com/SamGalanakis/lash", rev = "b5538b55c1cc5cdfe56c5aa59b0bd5330867fe33" }
lash-subagents = { git = "https://github.com/SamGalanakis/lash", rev = "b5538b55c1cc5cdfe56c5aa59b0bd5330867fe33" }
