[package]
name = "lash-oblique"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "lash-oblique"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

lash = { git = "https://github.com/SamGalanakis/lash", rev = "6d6aae19dff071c39e161e3787fa6639139e3bfb" }
lash-export = { git = "https://github.com/SamGalanakis/lash", rev = "6d6aae19dff071c39e161e3787fa6639139e3bfb" }
lash-llm-tools = { git = "https://github.com/SamGalanakis/lash", rev = "6d6aae19dff071c39e161e3787fa6639139e3bfb" }
lash-providers-builtin = { git = "https://github.com/SamGalanakis/lash", rev = "6d6aae19dff071c39e161e3787fa6639139e3bfb" }
lash-rlm-types = { git = "https://github.com/SamGalanakis/lash", rev = "6d6aae19dff071c39e161e3787fa6639139e3bfb" }
lash-sqlite-store = { git = "https://github.com/SamGalanakis/lash", rev = "6d6aae19dff071c39e161e3787fa6639139e3bfb" }
lash-subagents = { git = "https://github.com/SamGalanakis/lash", rev = "6d6aae19dff071c39e161e3787fa6639139e3bfb" }
